# watchdog

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
grafana/dashboards/: macos-host.json
grafana/provisioning/dashboards/: dashboard.yml
prometheus/: prometheus.yml
tests/: test_configs.py
